2007-04-25 Alasdair Allan <aa@astro.ex.ac.uk>

        * eSTAR/UA/Handler: Fixed some bugs on user agent mail returns.

2007-04-24 Alasdair Allan <aa@astro.ex.ac.uk>

	* startup/adp_programme: Script to start the ADP programme
        
        * eSTAR/UA/Handler: Added more debugging into the user agent mails.
        
        * eSTAR/Config: Added name_from_node() method in to return the 
          human readable name of the SOAP node agent end point.

2007-04-24 Eric Saunders <saunders@astro.ex.ac.uk>

	* BRANCH MERGE: Merged changes from the ADP variable star branch
	  'saunders_vs_agent_branch2' back into trunk at the truck tag
          of 'AA_Main_Trunk_24APR07'.

2007-04-24 Alasdair Allan <aa@astro.ex.ac.uk>

	* widgets/eSTAR Status.wdgt/*: Fixed bug on UKIRT status, updated 
	  for new node agents and Eric's new ADP agent.
	
        * bin/test_servers.pl: Changed over to new node agents

        * www/estar/cgi-bin/status.pl: Changed over to new node agents

        * www/estar/cgi-bin/mobile.pl: Changed over to new node agents
     
	* demo/votech_garching07/: Added PLASTIC forwarded scripts
	
	* demo/ag_edinburgh06: Added Workbench RPC scripts
	        
2007-04-23 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/robonet-1.0/cgi-bin/*: Added support for different filters
          from the override page.

2007-04-23 Eric Saunders <saunders@astro.ex.ac.uk>

	* bin/virtual_telescope.pl: Fixed several race conditions, and did
	  extensive final testing. Now reasonably confident the code is correct.

2007-04-20 Eric Saunders <saunders@astro.ex.ac.uk>

	* bin/virtual_telescope.pl: Minor modifications to allow a
	  multi-telescope network simulation to function. Added coords
	  for FTN and FTS; which telescope is determined by parsing the
	  process name. Changed telescope scoring to return 0 unless target
	  is observable at the indicated start time.

2007-04-18 Eric Saunders <saunders@astro.ex.ac.uk>
