@@ -1,3 +1,10 @@
+2007-04-26 Eric Saunders <saunders@astro.ex.ac.uk>
+
+	* bin/adaptive_vs_scheduler.pl, bin/virtual_telescope.pl, 
+	examples/adp_algorithm2.pl, examples/datetime_sandbox.pl, 
+	examples/telescope_sandbox.pl, eSTAR/VT/Handler.pm: Fixed hardcoded
+	user directories. 
+
 2007-04-25 Alasdair Allan <aa@astro.ex.ac.uk>
 
         * eSTAR/UA/Handler: Fixed some bugs on user agent mail returns.
